Correction du plantage dans les recherches retournant des éléments en fr-FR.

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-graphpatterns.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-graphpatterns.properties
@@ -76,7 +76,11 @@ searchConceptPattern= \
 	      FILTER (lang(?conceptPrefLabelLang) = "fr") \
 	  } \
 	  OPTIONAL { \
+	      ?concept skos:prefLabel ?conceptPrefLabelLang2 . \
+	      FILTER (lang(?conceptPrefLabelLang2) = "fr-fr") \
+	  } \
+	  OPTIONAL { \
 	      ?concept skos:prefLabel ?conceptPrefLabelNeutral . \
 	      FILTER (lang(?conceptPrefLabelNeutral) = "") \
 	  } \
-	  BIND (COALESCE(?conceptPrefLabelLang, ?conceptPrefLabelNeutral) AS ?conceptPrefLabel)
+	  BIND (COALESCE(?conceptPrefLabelLang, ?conceptPrefLabelLang2, ?conceptPrefLabelNeutral) AS ?conceptPrefLabel)
