--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -240,7 +240,7 @@ listRelatedSkosConcepts = \
 #   the current query only considers the resource's prefLabel (if any).
 #   all matching resources are assumed to be SKOS concepts.
 listParentSkosConcepts = \
-    CONSTRUCT { ?resource a skos:Concept;  skos:prefLabel ?label . } \
+    CONSTRUCT { ?resource a skos:Concept;  skos:prefLabel ?label; skos:broader ?broaderConcepts . } \
     WHERE { \
         ?uri skos:broader+ ?resource . \
         OPTIONAL { ?resource skos:prefLabel ?label . } \
