Utilisation de dc:relation au lieu de rdfs:seeAlso pour le lien "En savoir plus" du footer.

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -353,7 +353,7 @@ getThesaurusOrganizationWithConcept = \
 getThesaurusSeeMoreWithConceptScheme = \
     SELECT ?seeMoreUrl \
     WHERE { \
-      ?uri rdfs:seeAlso ?seeMoreUrl \
+      ?uri dc:relation ?seeMoreUrl \
     } 
 #
 # -------------------------------------------------------------------------------------------------
@@ -363,7 +363,7 @@ getThesaurusSeeMoreWithConcept = \
     SELECT ?seeMoreUrl \
     WHERE { \
       ?uri skos:inScheme ?conceptScheme . \
-      ?conceptScheme  rdfs:seeAlso ?seeMoreUrl \
+      ?conceptScheme  dc:relation ?seeMoreUrl \
     } 
 #
 # -----------------------------------------------------------------------------
