Résolution d'un problème de renseignement de la date d'import qui impactait la gestion du cache

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -35,16 +35,20 @@ getRdfClasses = \
 #
 # -------------------------------------------------------------------------------------------------
 # Lists the SKOS ConceptSchemes present in repository.
-# Each concept scheme is only described by a title and a last updated date.
+# Each concept scheme is only described by a title, a last updated date and a submission date of the resource.
 #
 listConceptSchemes = \
 	 CONSTRUCT { \
 		?conceptScheme dc:title ?label . \
 		?conceptScheme dct:modified ?lastUpdate . \
+		?conceptScheme dct:dateSubmitted ?lastImport . \
 	} WHERE { \
 		?conceptScheme dc:title ?label . \
 		OPTIONAL { \
 			?conceptScheme dct:modified ?lastUpdate . \
+		} \
+		OPTIONAL { \
+			?conceptScheme dct:dateSubmitted ?lastImport . \
 		} \
 	}
 #
