Affichage des illustrations liées au Concept
Les images sont récupérées de la propriété foaf:depiction

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -208,6 +208,7 @@ loadConcept = \
         	|| sameTerm(?property, skos:narrowMatch) \
         	|| sameTerm(?property, skos:relatedMatch) \
         	|| sameTerm(?property, foaf:focus) \
+        	|| sameTerm(?property, foaf:depiction) \
         	) \
         FILTER (?value != "") \
     }
