--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-prefixes.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-prefixes.properties
@@ -33,3 +33,4 @@ prefix.skos=http://www.w3.org/2004/02/skos/core#
 prefix.foaf=http://xmlns.com/foaf/0.1/
 prefix.iso-thes=http://purl.org/iso25964/skos-thes#
 prefix.ginco=http://data.culture.fr/thesaurus/ginco/ns/
+prefix.foaf=http://xmlns.com/foaf/0.1/
