Affichage des sources des termes - initialisation à reprendre

--- a/src/fr/gouv/culture/thesaurus/service/thesaurus-prefixes.properties
+++ b/src/fr/gouv/culture/thesaurus/service/thesaurus-prefixes.properties
@@ -34,3 +34,4 @@ prefix.foaf=http://xmlns.com/foaf/0.1/
 prefix.iso-thes=http://purl.org/iso25964/skos-thes#
 prefix.ginco=http://data.culture.fr/thesaurus/ginco/ns/
 prefix.foaf=http://xmlns.com/foaf/0.1/
+prefix.xl=http://www.w3.org/2008/05/skos-xl#
