Affichage des sources des termes dans la page Concept

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -214,6 +214,89 @@ loadConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
+# Lists the Concept preferred Labels
+# Retrieving more informations than before
+#
+# @param  uri   the Concept URI
+#
+# @returns
+#	xl:prefLabel properties if it exists, skos:prefLabel literal value otherwise
+#
+# Remarks:
+#   the current query allows retro-compatibility with skos:prefLabel
+#	First part (before UNION) selects all xl:prefLabel and subProperties
+#	Second part (after UNION) selects all skos:prefLabel except those which are sibling of xl:prefLabel  
+loadConceptPrefLabels = \
+    CONSTRUCT { \
+    	?uri skos:prefLabel ?labelValue. \
+    	?uri xl:prefLabel ?xlUri. \
+    	?xlUri ?property ?value. \
+	} \
+    WHERE { \
+		{ \
+			?uri xl:prefLabel ?xlUri. \
+			OPTIONAL { \
+				?xlUri xl:literalForm ?labelValue. \
+			} \
+			OPTIONAL { \
+				?xlUri ?property ?value. \
+				FILTER (isLiteral(?value)) \
+				FILTER (?value != "") \
+			} \
+		} \
+		UNION \
+		{ \
+			?uri skos:prefLabel ?labelValue. \
+			OPTIONAL { \
+				?uri xl:prefLabel ?xlUri. \
+			} \
+			FILTER(!bound(?xlUri)) \
+			FILTER (?labelValue != "") \
+		} \
+	}
+#
+# -------------------------------------------------------------------------------------------------
+# Lists the Concept alternative Labels
+#
+# @param  uri   the Concept URI
+#
+# @returns
+#	xl:prefLabel properties if it exists, skos:prefLabel literal value otherwise
+#
+# Remarks:
+#   the current query allows retro-compatibility with skos:altLabel
+#	First part (before UNION) selects all xl:altLabel and subProperties
+#	Second part (after UNION) selects all skos:altLabel except those which are sibling of xl:altLabel  
+loadConceptAltLabels = \
+    CONSTRUCT { \
+    	?uri skos:altLabel ?labelValue. \
+    	?uri xl:altLabel ?xlUri. \
+    	?xlUri ?property ?value. \
+	} \
+    WHERE { \
+		{ \
+			?uri xl:altLabel ?xlUri. \
+			OPTIONAL { \
+				?xlUri xl:literalForm ?labelValue. \
+			} \
+			OPTIONAL { \
+				?xlUri ?property ?value. \
+				FILTER (isLiteral(?value)) \
+				FILTER (?value != "") \
+			} \
+		} \
+		UNION \
+		{ \
+			?uri skos:altLabel ?labelValue. \
+			OPTIONAL { \
+				?uri xl:altLabel ?xlUri. \
+			} \
+			FILTER(!bound(?xlUri)) \
+			FILTER (?labelValue != "") \
+		} \
+	}
+#
+# -------------------------------------------------------------------------------------------------
 # Lists the concepts associated to a given Concept with a specific property.
 #
 # @param  uri    the Concept URI
