Ajout de la page ConceptGroup - Initialisation : Modèle + Mise en place dans l'architecture
Ajout d'un modèle de données correspondant aux conceptGroups
Ajout de la liaison entre requêtes et modèles
Requêtes Sparql (récupération des conceptGroups selon leur label et un vocabulaire)
Ajout de la vue (affichage à terminer)

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -176,6 +176,83 @@ listConceptGroupsFromConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Label.
+#
+# @param  labelToMatch   the label of conceptGroup one is looking for
+#
+# Remarks:
+#   
+#
+listMatchingLabelConceptGroups = \
+    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    WHERE { \
+    	?conceptGroup rdfs:label ?label . \
+    	?conceptGroup rdf:type ?type .\
+    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
+    	?conceptGroup ?property ?value . \
+    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Label.
+#
+# @param  labelToMatch   the label of conceptGroup one is looking for
+#
+# Remarks:
+#   
+#
+listMatchingLabelConceptGroupsFilterVocabulary = \
+    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    WHERE { \
+    	?conceptGroup rdfs:label ?label . \
+    	?conceptGroup skos:inScheme ?filterVocabulary . \
+    	?conceptGroup rdf:type ?type .\
+    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
+    	?conceptGroup ?property ?value . \
+    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Concept.
+#
+# @param  uri   the Concept URI
+#
+# Remarks:
+#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   are returned.
+#
+listConceptsFromConceptGroup = \
+    CONSTRUCT { ?concept ?property ?value . } \
+    WHERE { \
+    	?concept rdf:type skos:Concept . \
+    	?uri skos:member ?concept . \
+    	?concept ?property ?value . \
+    	FILTER (isLiteral(?value)) . \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Concept.
+#
+# @param  uri   the Concept URI
+#
+# Remarks:
+#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   are returned.
+#
+listConceptSchemesFromConceptGroup = \
+    CONSTRUCT { ?conceptScheme ?property ?value . } \
+    WHERE { \
+    	?conceptScheme rdf:type skos:ConceptScheme . \
+    	?uri skos:inScheme ?conceptScheme . \
+    	?conceptScheme ?property ?value . \
+    	FILTER (isLiteral(?value)) . \
+    }
+#
+# -------------------------------------------------------------------------------------------------
 # Returns the graph associated to a given ConceptScheme.
 # @param  uri   the ConceptScheme URI
 constructConceptScheme = \
