Initialisation - Modèle + Mise en place dans l'architecture
Routing OK
Passage de paramètres OK
Ajout d'un modèle de données correspondant aux conceptGroups
Ajout de la liaison entre requêtes et modèles
Première étape réussie : récupérer tous les conceptGroups
Prochaine étape : Binding variables label et vocabulaire source vers
Sparql

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -176,6 +176,42 @@ listConceptGroupsFromConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Label.
+#
+# @param  labelToMatch   the label of conceptGroup one is looking for
+#
+# Remarks:
+#   
+#
+listMatchingLabelConceptGroups = \
+    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    WHERE { \
+    	?conceptGroup rdfs:label ?labelToMatch . \
+    	?conceptGroup rdf:type ?type .\
+    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
+    	?conceptGroup ?property ?value . \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Label.
+#
+# @param  labelToMatch   the label of conceptGroup one is looking for
+#
+# Remarks:
+#   
+#
+listMatchingLabelConceptGroupsFilterVocabulary = \
+    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    WHERE { \
+    	?conceptGroup rdfs:label ?labelToMatch . \
+    	?conceptGroup rdf:type ?type .\
+    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
+    	?conceptGroup ?property ?value . \
+    }
+#
+# -------------------------------------------------------------------------------------------------
 # Returns the graph associated to a given ConceptScheme.
 # @param  uri   the ConceptScheme URI
 constructConceptScheme = \
