--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -187,10 +187,11 @@ listConceptGroupsFromConcept = \
 listMatchingLabelConceptGroups = \
     CONSTRUCT { ?conceptGroup ?property ?value . } \
     WHERE { \
-    	?conceptGroup rdfs:label ?labelToMatch . \
+    	?conceptGroup rdfs:label ?label . \
     	?conceptGroup rdf:type ?type .\
     	?type rdfs:subClassOf iso-thes:ConceptGroup . \
     	?conceptGroup ?property ?value . \
+    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
     }
 #
 # -------------------------------------------------------------------------------------------------
@@ -205,10 +206,50 @@ listMatchingLabelConceptGroups = \
 listMatchingLabelConceptGroupsFilterVocabulary = \
     CONSTRUCT { ?conceptGroup ?property ?value . } \
     WHERE { \
-    	?conceptGroup rdfs:label ?labelToMatch . \
+    	?conceptGroup rdfs:label ?label . \
+    	?conceptGroup skos:inScheme ?filterVocabulary . \
     	?conceptGroup rdf:type ?type .\
     	?type rdfs:subClassOf iso-thes:ConceptGroup . \
     	?conceptGroup ?property ?value . \
+    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Concept.
+#
+# @param  uri   the Concept URI
+#
+# Remarks:
+#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   are returned.
+#
+listConceptsFromConceptGroup = \
+    CONSTRUCT { ?concept ?property ?value . } \
+    WHERE { \
+    	?concept rdf:type skos:Concept . \
+    	?uri skos:member ?concept . \
+    	?concept ?property ?value . \
+    	FILTER (isLiteral(?value)) . \
+    }
+#
+# -------------------------------------------------------------------------------------------------
+# //TODO à faire complètement (description + requête)
+# Lists the SKOS ConceptGroups containing a given Concept.
+#
+# @param  uri   the Concept URI
+#
+# Remarks:
+#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   are returned.
+#
+listConceptSchemesFromConceptGroup = \
+    CONSTRUCT { ?conceptScheme ?property ?value . } \
+    WHERE { \
+    	?conceptScheme rdf:type skos:ConceptScheme . \
+    	?uri skos:inScheme ?conceptScheme . \
+    	?conceptScheme ?property ?value . \
+    	FILTER (isLiteral(?value)) . \
     }
 #
 # -------------------------------------------------------------------------------------------------
