Ajout de la page ConceptGroup : mise en page des résultats
Récupération des dates quand on filtre sur un vocabulaire
Afficher les vocabulaires (à droite)
Modifier les templates de concept et conceptScheme pour y ajouter les liens de conceptGroup

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -176,13 +176,13 @@ listConceptGroupsFromConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# //TODO à faire complètement (description + requête)
-# Lists the SKOS ConceptGroups containing a given Label.
+# Lists the SKOS ConceptGroups which contains a given Label.
 #
-# @param  labelToMatch   the label of conceptGroup one is looking for
+# @param  labelToMatch   label of conceptGroup to look for
 #
 # Remarks:
-#   
+#   Matching is tested on text value ("str(...)") so that it does not depend
+#	on language value. 
 #
 listMatchingLabelConceptGroups = \
     CONSTRUCT { ?conceptGroup ?property ?value . } \
@@ -195,13 +195,13 @@ listMatchingLabelConceptGroups = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# //TODO à faire complètement (description + requête)
-# Lists the SKOS ConceptGroups containing a given Label.
+# Lists the SKOS ConceptGroups which contains a given Label and a given vocabulary (conceptScheme).
 #
-# @param  labelToMatch   the label of conceptGroup one is looking for
+# @param  labelToMatch		label of conceptGroup to look for
+# @param  filterVocabulary	vocabulary (conceptScheme) of conceptGroup to look for
 #
 # Remarks:
-#   
+#   Same as listMatchingLabelConceptGroups, adding filtering on vocabulary. 
 #
 listMatchingLabelConceptGroupsFilterVocabulary = \
     CONSTRUCT { ?conceptGroup ?property ?value . } \
@@ -215,13 +215,12 @@ listMatchingLabelConceptGroupsFilterVocabulary = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# //TODO à faire complètement (description + requête)
-# Lists the SKOS ConceptGroups containing a given Concept.
+# Lists the SKOS Concepts contained in a given ConceptGroup.
 #
-# @param  uri   the Concept URI
+# @param  uri   the ConceptGroup URI
 #
 # Remarks:
-#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   Concepts from the specified concept group are described. However, only triplets with a literal value
 #   are returned.
 #
 listConceptsFromConceptGroup = \
@@ -234,13 +233,12 @@ listConceptsFromConceptGroup = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# //TODO à faire complètement (description + requête)
-# Lists the SKOS ConceptGroups containing a given Concept.
+# Lists the SKOS ConceptSchemes contained in a given ConceptGroup.
 #
-# @param  uri   the Concept URI
+# @param  uri   the ConceptGroup URI
 #
 # Remarks:
-#   Concept groups from the specified concept are described. However, only triplets with a literal value
+#   ConceptSchemes from the specified concept group are described. However, only triplets with a literal value
 #   are returned.
 #
 listConceptSchemesFromConceptGroup = \
