Refonte page ConceptGroup pour optimisation et accelération du temps d'affichage

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -176,78 +176,136 @@ listConceptGroupsFromConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# Lists the SKOS ConceptGroups which contains a given Label.
+# Lists the SKOS ConceptGroups which contains a given Label and all related
+# elements (in this case concepts and conceptSchemes).
 #
 # @param  labelToMatch   label of conceptGroup to look for
 #
 # Remarks:
-#   Matching is tested on text value ("str(...)") so that it does not depend
+#   - Matching is tested on text value ("str(...)") so that it does not depend
 #	on language value. 
-#
+#	- The query is build in three parts :		
+#		- First part retrieve matching skos:conceptGroups and related
+#		  skos:Concepts (prefLabel only)
+#		- Second part retrieve matching skos:conceptGroups and related
+#		  skos:Concepts (prefLabel and linked skos:ConceptScheme dc:title)
+#		- Third part retrieve matching skos:conceptGroups and related
+#		  skos:ConceptSchemes (dc:title)
+# 
 listMatchingLabelConceptGroups = \
-    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    CONSTRUCT {  \
+        ?conceptGroup   rdf:type        iso-thes:ConceptGroup ;  \
+                        ?property       ?value ;  \
+                        skos:member     ?conceptUri ;  \
+                        skos:inScheme   ?conceptSchemeUri .  \
+        ?conceptUri     skos:prefLabel ?conceptLabel ;  \
+                        skos:inScheme   ?linkedConceptSchemeUri .  \
+        ?linkedConceptSchemeUri dc:title    ?linkedConceptSchemeTitle .  \
+        ?conceptSchemeUri   dc:title  ?conceptSchemeTitle .  \
+    }  \
     WHERE { \
-    	?conceptGroup rdfs:label ?label . \
-    	?conceptGroup rdf:type ?type .\
-    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
-    	?conceptGroup ?property ?value . \
-    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:member ?conceptUri .  \
+            ?conceptUri rdf:type skos:Concept .  \
+            ?conceptUri skos:prefLabel ?conceptLabel .  \
+        } \
+        UNION \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:member ?conceptUri .  \
+            ?conceptUri rdf:type skos:Concept . \
+            ?conceptUri skos:prefLabel ?conceptLabel .  \
+            ?conceptUri skos:inScheme ?linkedConceptSchemeUri .  \
+            ?linkedConceptSchemeUri dc:title ?linkedConceptSchemeTitle . \
+        } \
+        UNION \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:inScheme ?conceptSchemeUri .  \
+            ?conceptSchemeUri dc:title ?conceptSchemeTitle .  \
+        } \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# Lists the SKOS ConceptGroups which contains a given Label and a given vocabulary (conceptScheme).
+# Lists the SKOS ConceptGroups which contains a given Label and a given
+# vocabulary (conceptScheme) and all related elements (in this case concepts
+# and conceptSchemes). Also retrieve ConceptSchemes which ConceptGroup match
+# only the label (not the vocabulary), in order to retrieve all filters.
 #
-# @param  labelToMatch		label of conceptGroup to look for
+# @param  labelToMatch   label of conceptGroup to look for
 # @param  filterVocabulary	vocabulary (conceptScheme) of conceptGroup to look for
 #
 # Remarks:
-#   Same as listMatchingLabelConceptGroups, adding filtering on vocabulary. 
-#
+#   - Matching is tested on text value ("str(...)") so that it does not depend
+#	on language value. 
+#	- The query is build in three parts :		
+#		- First part retrieve matching skos:conceptGroups and related
+#		  skos:Concepts (prefLabel only)
+#		- Second part retrieve matching skos:conceptGroups and related
+#		  skos:Concepts (prefLabel and linked skos:ConceptScheme dc:title)
+#		- Third part retrieve matching skos:conceptGroups (label only,
+#		  !not vocabulary!) and related skos:ConceptSchemes (dc:title)
+# 
 listMatchingLabelConceptGroupsFilterVocabulary = \
-    CONSTRUCT { ?conceptGroup ?property ?value . } \
+    CONSTRUCT {  \
+        ?conceptGroup   rdf:type        iso-thes:ConceptGroup ;  \
+                        ?property       ?value ;  \
+                        skos:member     ?conceptUri ;  \
+                        skos:inScheme   ?conceptSchemeUri .  \
+        ?conceptUri     skos:prefLabel ?conceptLabel ;  \
+                        skos:inScheme   ?linkedConceptSchemeUri .  \
+        ?linkedConceptSchemeUri dc:title    ?linkedConceptSchemeTitle .  \
+        ?conceptSchemeUri   dc:title  ?conceptSchemeTitle .  \
+    }  \
     WHERE { \
-    	?conceptGroup rdfs:label ?label . \
-    	?conceptGroup skos:inScheme ?filterVocabulary . \
-    	?conceptGroup rdf:type ?type .\
-    	?type rdfs:subClassOf iso-thes:ConceptGroup . \
-    	?conceptGroup ?property ?value . \
-    	FILTER(sameTerm(str(?labelToMatch),str(?label))) \
-    }
-#
-# -------------------------------------------------------------------------------------------------
-# Lists the SKOS Concepts contained in a given ConceptGroup.
-#
-# @param  uri   the ConceptGroup URI
-#
-# Remarks:
-#   Concepts from the specified concept group are described. However, only triplets with a literal value
-#   are returned.
-#
-listConceptsFromConceptGroup = \
-    CONSTRUCT { ?concept ?property ?value . } \
-    WHERE { \
-    	?concept rdf:type skos:Concept . \
-    	?uri skos:member ?concept . \
-    	?concept ?property ?value . \
-    	FILTER (isLiteral(?value)) . \
-    }
-#
-# -------------------------------------------------------------------------------------------------
-# Lists the SKOS ConceptSchemes contained in a given ConceptGroup.
-#
-# @param  uri   the ConceptGroup URI
-#
-# Remarks:
-#   ConceptSchemes from the specified concept group are described. However, only triplets with a literal value
-#   are returned.
-#
-listConceptSchemesFromConceptGroup = \
-    CONSTRUCT { ?conceptScheme ?property ?value . } \
-    WHERE { \
-    	?conceptScheme rdf:type skos:ConceptScheme . \
-    	?uri skos:inScheme ?conceptScheme . \
-    	?conceptScheme ?property ?value . \
-    	FILTER (isLiteral(?value)) . \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup skos:inScheme ?filterVocabulary . \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:member ?conceptUri .  \
+            ?conceptUri rdf:type skos:Concept .  \
+            ?conceptUri skos:prefLabel ?conceptLabel .  \
+        } \
+        UNION \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup skos:inScheme ?filterVocabulary . \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:member ?conceptUri .  \
+            ?conceptUri rdf:type skos:Concept . \
+            ?conceptUri skos:prefLabel ?conceptLabel .  \
+            ?conceptUri skos:inScheme ?linkedConceptSchemeUri .  \
+            ?linkedConceptSchemeUri dc:title ?linkedConceptSchemeTitle . \
+        } \
+        UNION \
+        { \
+            ?conceptGroup rdfs:label ?label .  \
+            ?conceptGroup rdf:type ?type . \
+            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
+            ?conceptGroup ?property ?value .  \
+            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            ?conceptGroup skos:inScheme ?conceptSchemeUri .  \
+            ?conceptSchemeUri dc:title ?conceptSchemeTitle .  \
+        } \
     }
 #
 # -------------------------------------------------------------------------------------------------
