Correction requete conceptGroup : Un concept appartient obligatoirement a un conceptScheme

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -184,12 +184,10 @@ listConceptGroupsFromConcept = \
 # Remarks:
 #   - Matching is tested on text value ("str(...)") so that it does not depend
 #	on language value. 
-#	- The query is build in three parts :		
+#	- The query is build in two parts :		
 #		- First part retrieve matching skos:conceptGroups and related
-#		  skos:Concepts (prefLabel only)
-#		- Second part retrieve matching skos:conceptGroups and related
 #		  skos:Concepts (prefLabel and linked skos:ConceptScheme dc:title)
-#		- Third part retrieve matching skos:conceptGroups and related
+#		- Second part retrieve matching skos:conceptGroups and related
 #		  skos:ConceptSchemes (dc:title)
 # 
 listMatchingLabelConceptGroups = \
@@ -204,17 +202,6 @@ listMatchingLabelConceptGroups = \
         ?conceptSchemeUri   dc:title  ?conceptSchemeTitle .  \
     }  \
     WHERE { \
-        { \
-            ?conceptGroup rdfs:label ?label .  \
-            ?conceptGroup rdf:type ?type . \
-            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
-            ?conceptGroup ?property ?value .  \
-            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
-            ?conceptGroup skos:member ?conceptUri .  \
-            ?conceptUri rdf:type skos:Concept .  \
-            ?conceptUri skos:prefLabel ?conceptLabel .  \
-        } \
-        UNION \
         { \
             ?conceptGroup rdfs:label ?label .  \
             ?conceptGroup rdf:type ?type . \
@@ -251,12 +238,10 @@ listMatchingLabelConceptGroups = \
 # Remarks:
 #   - Matching is tested on text value ("str(...)") so that it does not depend
 #	on language value. 
-#	- The query is build in three parts :		
+#	- The query is build in two parts :
 #		- First part retrieve matching skos:conceptGroups and related
-#		  skos:Concepts (prefLabel only)
-#		- Second part retrieve matching skos:conceptGroups and related
 #		  skos:Concepts (prefLabel and linked skos:ConceptScheme dc:title)
-#		- Third part retrieve matching skos:conceptGroups (label only,
+#		- Second part retrieve matching skos:conceptGroups (label only,
 #		  !not vocabulary!) and related skos:ConceptSchemes (dc:title)
 # 
 listMatchingLabelConceptGroupsFilterVocabulary = \
@@ -271,18 +256,6 @@ listMatchingLabelConceptGroupsFilterVocabulary = \
         ?conceptSchemeUri   dc:title  ?conceptSchemeTitle .  \
     }  \
     WHERE { \
-        { \
-            ?conceptGroup rdfs:label ?label .  \
-            ?conceptGroup skos:inScheme ?filterVocabulary . \
-            ?conceptGroup rdf:type ?type . \
-            ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
-            ?conceptGroup ?property ?value .  \
-            FILTER(sameTerm(str(?labelToMatch),str(?label))) \
-            ?conceptGroup skos:member ?conceptUri .  \
-            ?conceptUri rdf:type skos:Concept .  \
-            ?conceptUri skos:prefLabel ?conceptLabel .  \
-        } \
-        UNION \
         { \
             ?conceptGroup rdfs:label ?label .  \
             ?conceptGroup skos:inScheme ?filterVocabulary . \
