Correction de l'affichage des libellés pref et alt et de leur source
Les prefLabel et altLabel, ainsi que leur sources issues de skos XL ne s'affichaient pas correctement dans certains cas
La récupération des labels a été complètement revue dans ce commit

--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -320,86 +320,38 @@ loadConcept = \
     }
 #
 # -------------------------------------------------------------------------------------------------
-# Lists the Concept preferred Labels
-# Retrieving more informations than before
+# Lists the Concept labels from skos-xl (xl:prefLabel and xl:altLabel), each label is associated with its properties
 #
 # @param  uri   the Concept URI
 #
 # @returns
-#	xl:prefLabel properties if it exists, skos:prefLabel literal value otherwise
+# 	triplets corresponding to xl labels and their properties
 #
 # Remarks:
-#   the current query allows retro-compatibility with skos:prefLabel
-#	First part (before UNION) selects all xl:prefLabel and subProperties
-#	Second part (after UNION) selects all skos:prefLabel except those which are sibling of xl:prefLabel  
-loadConceptPrefLabels = \
+#   the current query selects all  and their related properties
+#   only xl labels with non empty xl:literalForm are selected 
+#	only properties with non empty values are selected
+loadConceptSkosXlLabels = \
     CONSTRUCT { \
-    	?uri skos:prefLabel ?labelValue. \
-    	?uri xl:prefLabel ?xlUri. \
     	?xlUri ?property ?value. \
+    	?xlUri rdf:type ?type. \
 	} \
     WHERE { \
-		{ \
+    	{ \
 			?uri xl:prefLabel ?xlUri. \
-			OPTIONAL { \
-				?xlUri xl:literalForm ?labelValue. \
-			} \
-			OPTIONAL { \
-				?xlUri ?property ?value. \
-				FILTER (isLiteral(?value)) \
-				FILTER (?value != "") \
-			} \
-		} \
-		UNION \
-		{ \
-			?uri skos:prefLabel ?labelValue. \
-			OPTIONAL { \
-				?uri xl:prefLabel ?xlUri. \
-			} \
-			FILTER(!bound(?xlUri)) \
-			FILTER (?labelValue != "") \
-		} \
-	}
-#
-# -------------------------------------------------------------------------------------------------
-# Lists the Concept alternative Labels
-#
-# @param  uri   the Concept URI
-#
-# @returns
-#	xl:prefLabel properties if it exists, skos:prefLabel literal value otherwise
-#
-# Remarks:
-#   the current query allows retro-compatibility with skos:altLabel
-#	First part (before UNION) selects all xl:altLabel and subProperties
-#	Second part (after UNION) selects all skos:altLabel except those which are sibling of xl:altLabel  
-loadConceptAltLabels = \
-    CONSTRUCT { \
-    	?uri skos:altLabel ?labelValue. \
-    	?uri xl:altLabel ?xlUri. \
-    	?xlUri ?property ?value. \
-	} \
-    WHERE { \
-		{ \
+    	} \
+    	UNION \
+    	{ \
 			?uri xl:altLabel ?xlUri. \
-			OPTIONAL { \
-				?xlUri xl:literalForm ?labelValue. \
-			} \
-			OPTIONAL { \
-				?xlUri ?property ?value. \
-				FILTER (isLiteral(?value)) \
-				FILTER (?value != "") \
-			} \
+    	} \
+		?xlUri xl:literalForm ?labelValue. \
+		?xlUri rdf:type ?type. \
+		OPTIONAL { \
+			?xlUri ?property ?value. \
+			FILTER (isLiteral(?value)) \
+			FILTER (str(?value) != "") \
 		} \
-		UNION \
-		{ \
-			?uri skos:altLabel ?labelValue. \
-			OPTIONAL { \
-				?uri xl:altLabel ?xlUri. \
-			} \
-			FILTER(!bound(?xlUri)) \
-			FILTER (?labelValue != "") \
-		} \
+		FILTER (str(?labelValue) != "") \
 	}
 #
 # -------------------------------------------------------------------------------------------------
