Correction des fichiers properties pour échapper les simple quotes dans les messages

--- a/src/thesaurus-errors.properties
+++ b/src/thesaurus-errors.properties
@@ -30,11 +30,11 @@
 # ============================================================================
 #
 sparql.select.failed        = Erreur de requ\u00eatage du r\u00e9f\u00e9rentiel Th\u00e9saurus
-sparql.select.ambiguite 	= Erreur de requ\u00eatage du r\u00e9f\u00e9rentiel Th\u00e9saurus : plusieurs valeurs retourn\u00e9es alors qu'une seule valeur est attendue
+sparql.select.ambiguite 	= Erreur de requ\u00eatage du r\u00e9f\u00e9rentiel Th\u00e9saurus : plusieurs valeurs retourn\u00e9es alors qu''une seule valeur est attendue
 sparql.construct.failed     = Erreur de requ\u00eatage du r\u00e9f\u00e9rentiel Th\u00e9saurus
 sparql.uri.not.found        = Item {0} inconnu dans le r\u00e9f\u00e9rentiel Th\u00e9saurus
 #
-rdf.import.add.failed       = Echec d'import des donn\u00e9es RDF/XML dans le r\u00e9f\u00e9rentiel
+rdf.import.add.failed       = Echec d''import des donn\u00e9es RDF/XML dans le r\u00e9f\u00e9rentiel
 rdf.import.invalid.data     = Structure de donn\u00e9es RDF invalide : {0}
 rdf.import.no.graph.found   = Structure de donn\u00e9es RDF non support\u00e9e : aucun th\u00e9saurus identifiable
 #
