--- a/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
+++ b/src/fr/gouv/culture/thesaurus/service/impl/sparql-queries.properties
@@ -154,6 +154,7 @@ listConceptGroups = \
     	?type rdfs:subClassOf iso-thes:ConceptGroup . \
     	?conceptGroup ?property ?value . \
     	FILTER (isLiteral(?value)) \
+    	FILTER (?value != "") \
     }
 #
 # -------------------------------------------------------------------------------------------------
@@ -173,6 +174,7 @@ listConceptGroupsFromConcept = \
     	?type rdfs:subClassOf iso-thes:ConceptGroup . \
     	?conceptGroup ?property ?value . \
     	FILTER (isLiteral(?value)) \
+    	FILTER (?value != "") \
     }
 #
 # -------------------------------------------------------------------------------------------------
@@ -208,6 +210,7 @@ listMatchingLabelConceptGroups = \
             ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
             ?conceptGroup ?property ?value .  \
             FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            FILTER(isLiteral(?value)) \
             ?conceptGroup skos:member ?conceptUri .  \
             ?conceptUri rdf:type skos:Concept . \
             ?conceptUri skos:prefLabel ?conceptLabel .  \
@@ -221,6 +224,7 @@ listMatchingLabelConceptGroups = \
             ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
             ?conceptGroup ?property ?value .  \
             FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            FILTER(isLiteral(?value)) \
             ?conceptGroup skos:inScheme ?conceptSchemeUri .  \
             ?conceptSchemeUri dc:title ?conceptSchemeTitle .  \
         } \
@@ -263,6 +267,7 @@ listMatchingLabelConceptGroupsFilterVocabulary = \
             ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
             ?conceptGroup ?property ?value .  \
             FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            FILTER(isLiteral(?value)) \
             ?conceptGroup skos:member ?conceptUri .  \
             ?conceptUri rdf:type skos:Concept . \
             ?conceptUri skos:prefLabel ?conceptLabel .  \
@@ -276,6 +281,7 @@ listMatchingLabelConceptGroupsFilterVocabulary = \
             ?type rdfs:subClassOf iso-thes:ConceptGroup .  \
             ?conceptGroup ?property ?value .  \
             FILTER(sameTerm(str(?labelToMatch),str(?label))) \
+            FILTER(isLiteral(?value)) \
             ?conceptGroup skos:inScheme ?conceptSchemeUri .  \
             ?conceptSchemeUri dc:title ?conceptSchemeTitle .  \
         } \
